gobmkida/g2/influence_get_moyo_segmentation
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/influence_get_moyo_segmentation/src/engine/influence.c:1856:6: error: use of undeclared identifier 'byte_A12ADF'
if ( byte_A12ADF[i] != 3 ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/influence_get_moyo_segmentation/src/obj/1/influence.o] Error 1
